--- a/src/Bight.Math/Bight.Math.csproj
+++ b/src/Bight.Math/Bight.Math.csproj
@@ -1,13 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net4.8</TargetFrameworks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="ImageNet\" />
-    <Folder Include="MNIST\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
