--- a/src/Bight.Neural/Bight.Neural.csproj
+++ b/src/Bight.Neural/Bight.Neural.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net4.8</TargetFrameworks>
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <Folder Include="Core\" />
-    <Folder Include="Model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
   </ItemGroup>
 
 </Project>
