Add MVVM Cross package.

--- a/src/Bight.Neural/Bight.Neural.csproj
+++ b/src/Bight.Neural/Bight.Neural.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+    <PackageReference Include="MvvmCross" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
