--- a/src/Bight.UnitTest/Bight.UnitTest.csproj
+++ b/src/Bight.UnitTest/Bight.UnitTest.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net4.8</TargetFrameworks>
+    <TargetFrameworks>net4.8</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Bight.Math\Bight.Mathematics.csproj" />
     <ProjectReference Include="..\Bight.Neural\Bight.Neural.csproj" />
+    <ProjectReference Include="..\Numerics\Numerics.csproj" />
   </ItemGroup>
 
 </Project>
