Add package for NetCoreApp.

--- a/src/Bight.Math/Bight.Mathematics.csproj
+++ b/src/Bight.Math/Bight.Mathematics.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Numerics\Numerics.csproj" />
   </ItemGroup>
 
