--- a/src/Bight.Neural/Bight.Neural.csproj
+++ b/src/Bight.Neural/Bight.Neural.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="MvvmCross" Version="8.0.1" />
     <PackageReference Include="YAXLib" Version="2.15.0" />
   </ItemGroup>
