--- a/src/Bight.UnitTest/Bight.UnitTest.csproj
+++ b/src/Bight.UnitTest/Bight.UnitTest.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net4.8</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net4.8</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MvvmCross" Version="8.0.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
