--- a/src/Bight.Neural/Bight.Neural.csproj
+++ b/src/Bight.Neural/Bight.Neural.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="MvvmCross" Version="8.0.1" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
     <PackageReference Include="YAXLib" Version="2.15.0" />
   </ItemGroup>
 
