--- a/src/Bight.UnitTest/Bight.UnitTest.csproj
+++ b/src/Bight.UnitTest/Bight.UnitTest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MvvmCross" Version="8.0.1" />
