--- a/src/Bight.UnitTest/Bight.UnitTest.csproj
+++ b/src/Bight.UnitTest/Bight.UnitTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NeuralTest\NeuronTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
@@ -24,6 +28,10 @@
     <ProjectReference Include="..\Bight.Math\Bight.Mathematics.csproj" />
     <ProjectReference Include="..\Bight.Neural\Bight.Neural.csproj" />
     <ProjectReference Include="..\Numerics\Numerics.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NeuralTest\" />
   </ItemGroup>
 
 </Project>
