--- a/src/Bight.Math/Bight.Mathematics.csproj
+++ b/src/Bight.Math/Bight.Mathematics.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Numerics\Numerics.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Loss\" />
+  </ItemGroup>
+
 </Project>
